pdf print out and rejection reason

--- a/complaint_management/views/complaint_views.xml
+++ b/complaint_management/views/complaint_views.xml
@@ -69,14 +69,14 @@
         </field>
     </record>
 
-    <!-- Action -->
+    <!-- Action
     <record id="action_complaint" model="ir.actions.act_window">
         <field name="name">Complaints</field>
         <field name="res_model">complaint.management</field>
         <field name="view_mode">tree,form</field>
-    </record>
+    </record> -->
 
     <!-- Menu -->
-    <menuitem id="menu_complaint_root" name="Complaint Management" sequence="10"/>
-    <menuitem id="menu_complaint" name="Complaints" parent="menu_complaint_root" action="action_complaint"/>
+    <!-- <menuitem id="menu_complaint_root" name="Complaint Management" sequence="10"/>
+    <menuitem id="menu_complaint" name="Complaints" parent="menu_complaint_root" action="action_complaint"/> -->
 </odoo>
