sparit print actio

--- a/customer_complient/report/report_template.xml
+++ b/customer_complient/report/report_template.xml
@@ -1,4 +1,3 @@
-<!-- report/report_compliant_register_template.xml -->
 <odoo>
   <template id="report_compliant_register">
     <t t-call="web.external_layout">
@@ -6,61 +5,82 @@
         <main class="page">
           <div style="font-size: 13px;">
 
-            <h2 style="text-align:center;">Complaint Report</h2>
+            <h2 style="text-align: center; margin-bottom: 10px;">Complaint Report</h2>
             <hr/>
 
-            <p><strong>Date Received:</strong> <t t-esc="doc.date"/></p>
-            <p><strong>Complaint No:</strong> <t t-esc="doc.compliant_no"/></p>
-            <p><strong>Customer Name:</strong> <t t-esc="doc.customer_name.name"/></p>
-            <p><strong>Address:</strong> <t t-esc="doc.address"/></p>
+            <table style="width:100%; margin-bottom: 15px;">
+              <tr>
+                <td><strong>Date Received:</strong></td>
+                <td><t t-esc="doc.date"/></td>
+              </tr>
+              <tr>
+                <td><strong>Complaint No:</strong></td>
+                <td><t t-esc="doc.compliant_no"/></td>
+              </tr>
+              <tr>
+                <td><strong>Customer Name:</strong></td>
+                <td><t t-esc="doc.customer_name.name"/></td>
+              </tr>
+              <tr>
+                <td><strong>Address:</strong></td>
+                <td><t t-esc="doc.address"/></td>
+              </tr>
+            </table>
 
             <p><strong>Complaint Description:</strong></p>
-            <t t-if="doc.description">
-              <div t-raw="doc.description"/>
-            </t>
+            <div t-if="doc.description" t-raw="doc.description" style="margin-bottom: 10px;"/>
 
-            <p><strong>Received By:</strong> <t t-esc="doc.compliant_received.name or ''"/></p>
-            <p><strong>Job Position:</strong> <t t-esc="doc.job_position.name or ''"/></p>
+            <table style="width:100%; margin-bottom: 15px;">
+              <tr>
+                <td><strong>Received By:</strong></td>
+                <td><t t-esc="doc.compliant_received.name or ''"/></td>
+              </tr>
+              <tr>
+                <td><strong>Job Position:</strong></td>
+                <td><t t-esc="doc.job_position.name or ''"/></td>
+              </tr>
+            </table>
 
             <p><strong>Reason:</strong></p>
-            <t t-if="doc.reason">
-              <div t-raw="doc.reason"/>
-            </t>
+            <div t-if="doc.reason" t-raw="doc.reason" style="margin-bottom: 10px;"/>
 
-            <p><strong>Correction Taken:</strong> <t t-esc="doc.correction_taken.name or ''"/></p>
-            <p><strong>Correction Date:</strong> <t t-esc="doc.correction_date"/></p>
+            <table style="width:100%; margin-bottom: 15px;">
+              <tr>
+                <td><strong>Correction Taken:</strong></td>
+                <td><t t-esc="doc.correction_taken.name or ''"/></td>
+              </tr>
+              <tr>
+                <td><strong>Correction Date:</strong></td>
+                <td><t t-esc="doc.correction_date"/></td>
+              </tr>
+            </table>
 
             <p><strong>Corrective Action:</strong></p>
-            <t t-if="doc.corrective_action">
-              <div t-raw="doc.corrective_action"/>
-            </t>
+            <div t-if="doc.corrective_action" t-raw="doc.corrective_action" style="margin-bottom: 10px;"/>
 
-            <p><strong>Corrective Date:</strong> <t t-esc="doc.corrective_date"/></p>
+            <p><strong>Corrective Date:</strong> <t t-esc="doc.corrective_dat"/></p>
             <p><strong>Investigated By:</strong> <t t-esc="doc.investigated_by.name or ''"/></p>
-
             <p><strong>Issue Status:</strong> <t t-esc="doc.issue_status"/></p>
 
             <p><strong>Remarks:</strong></p>
-            <t t-if="doc.remarks">
-              <div t-raw="doc.remarks"/>
-            </t>
+            <div t-if="doc.remarks" t-raw="doc.remarks" style="margin-bottom: 10px;"/>
 
+            <!-- Signature section -->
             <br/><br/>
-            <div style="display:flex; justify-content:space-between; text-align:center;">
-              <div style="width:33%;">
-                <p></p>
-              </div>
-              <div style="width:33%;">
-                <p>Certified By:</p>
-                <p></p>
-              </div>
-              <div style="width:33%;">
-                <p>Approved By:</p>
-                <p></p>
-              </div>
-            </div>
+            <table style="width:100%; text-align:center; margin-top: 30px;">
+              <tr>
+                <td>
+                  <strong>Certified By:</strong><br/><br/><br/>
+                  <span style="display: inline-block; border-bottom: 1px solid #000; width: 80%; height: 20px;"></span>
+                </td>
+                <td>
+                  <strong>Approved By:</strong><br/><br/><br/>
+                  <span style="display: inline-block; border-bottom: 1px solid #000; width: 80%; height: 20px;"></span>
+                </td>
+              </tr>
+            </table>
 
-          </div> <!-- end content -->
+          </div>
         </main>
       </t>
     </t>
